[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/chars/scrap/scrap.gd" type="Script" id=1]
[ext_resource path="res://sprites/char/scrap/511.png" type="Texture" id=2]
[ext_resource path="res://sprites/char/scrap/587.png" type="Texture" id=3]
[ext_resource path="res://sprites/char/scrap/58b.png" type="Texture" id=4]
[ext_resource path="res://audio/char/scrap/shock.mp3" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[node name="scrap" type="Node2D"]
z_as_relative = false
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( -161, 112 )
z_index = 3
z_as_relative = false
frames = SubResource( 1 )

[node name="buttonsprite" type="Sprite" parent="."]
position = Vector2( -153, 259 )
z_index = 3
texture = ExtResource( 4 )

[node name="button" type="Button" parent="buttonsprite"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -47.0
margin_top = -27.0
margin_right = 50.0
margin_bottom = 93.0

[node name="timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="shocktimer" type="Timer" parent="."]
one_shot = true

[node name="shock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="buttonsprite/button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="shocktimer" to="." method="_on_shocktimer_timeout"]
